# mule

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE  README.md  cpgen.c
.github/workflows/: cmake-multi-platform.yml
advstr/: CMakeLists.txt  advstr.cpp  advstr.h  alstr.cpp  alstr.h
bis/: BasicContainer.cpp  BasicContainer.h  BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  ContextManager.cpp  ContextManager.h  ShiftBinaryStream.cpp  ShiftBinaryStream.h
bis/Container/: BasicContainer.cpp  BasicContainer.h  IsoContainer.cpp  IsoContainer.h
bis/Data/: Array.cpp  Array.h  ArrayField.cpp  ArrayField.h  BasicTypeCreator.cpp  BasicTypeCreator.h  BinaryStream.cpp  BinaryStream.h  FieldCreator.cpp  FieldCreator.h  Mappifier.cpp  Mappifier.h  ObjectCreator.cpp  ObjectCreator.h  ObjectManager.cpp  ObjectManager.h  Referrence.cpp  Referrence.h  ReferrenceFIeld.cpp  ReferrenceField.h  ShiftBinaryStream.cpp  Stringfier.cpp  Stringfier.h  Structure.cpp  Structure.h  Table.cpp  Table.h  TableRef.cpp  TableRef.h  TypeCreator.cpp  TypeCreator.h  TypeManager.cpp  TypeManager.h  VarChar.cpp  VarChar.h
bis/Data/Basic/: Align.cpp  Align.h  BasicType.cpp  BasicType.h  ContextManager.h  DataHandler.cpp  DataHandler.h  Double.cpp  Double.h  DoubleField.cpp  DoubleField.h  Dummy.cpp  Dummy.h  Enum.cpp  Enum.h  Field.cpp  Field.h  Float.cpp  Float.h  FloatField.cpp  FloatField.h  Integer.cpp  Integer.h  IntegerField.cpp  IntegerField.h  MultiValue.cpp  MultiValue.h  Object.cpp  Object.h  String.cpp  String.h  StringObject.cpp  StringObject.h  Structure.cpp  Structure.h  Table.cpp  Table.h  Type.cpp  Type.h  UString.h
bis/Data/Space/: Fragment.cpp  Fragment.h  FragmentManager.cpp  FragmentManager.h
bis/Data/Storage/: BinaryBlock.cpp  BinaryBlock.h  BinaryData.cpp  BinaryData.h  DataManager.cpp  DataManager.h
bis/Exception/: Exception.cpp  Exception.h  InvalidOperationException.cpp  InvalidOperationException.h  InvalidParameterException.cpp  InvalidParameterException.h  NotImplementedException.cpp  NotImplementedException.h  RestrictionViolationException.cpp  RestrictionViolationException.h
bis/Stream/: ElfStream.cpp  ElfStream.h
bis/xybase/: BinaryStream.cpp  BinaryStream.h  FileContainer.h  Singleton.h  Stream.h  StreamBasic.cpp  StreamBasic.h  StringBuilder.h  xyutils.cpp  xyutils.h
bis/xybase/Exception/: IOException.cpp  IOException.h  InvalidOperationException.cpp  InvalidOperationException.h  InvalidParameterException.cpp  InvalidParameterException.h  NotImplementedException.cpp  NotImplementedException.h  OutOfRangeException.cpp  OutOfRangeException.h  RuntimeException.cpp  RuntimeException.h
docs/: Mule.md  ObjectModule.md  Plugin.md  XmlFormat.md  overview.md
docs/bis/: Container.md
docs/mulert/: mulert.md
lib/: CMakeLists.txt
lib/lua/: lapi.c
lib/xybase/: BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  Event.h  FileContainer.cpp  FileContainer.h  FileContainerBasic.cpp  FileContainerBasic.h  HostFsMapper.cpp  HostFsMapper.h  MemoryStream.cpp  MemoryStream.h  Stream.cpp  Stream.h  StreamBasic.cpp  StreamBasic.h  StringBuilder.h  TextStream.cpp  TextStream.h  xyapi.h  xystring.cpp  xystring.h  xyutils.cpp  xyutils.h
lib/xybase/Exception/: Exception.cpp  Exception.h  IOException.cpp  IOException.h  InvalidOperationException.cpp  InvalidOperationException.h  InvalidParameterException.cpp  InvalidParameterException.h  NotImplementedException.cpp  NotImplementedException.h  OutOfRangeException.cpp  OutOfRangeException.h  RuntimeException.cpp  RuntimeException.h
lib/xybase/Fragment/: Fragment.cpp  Fragment.h  FragmentManager.cpp  FragmentManager.h
lib/xybase/Xml/: XmlNode.cpp  XmlNode.h  XmlParser.h
mule/: BinaryBlock.cpp  BinaryBlock.h  CMakeLists.txt  Configuration.cpp  Configuration.h  ElfStream.cpp  ElfStream.h  IsoContainer.cpp  IsoContainer.h  LuaApi.md  Manual.md  ResourceManager.cpp  ResourceManager.h  ShiftableReferrence.cpp  ShiftableReferrence.h  ShiftableString.cpp  ShiftableString.h  codepage.cpp  codepage.h  crc32.cpp  crc32.h  luaenv.cpp  luaenv.h  luafuncs.cpp  mule.cpp  mule.h  version.h  version.h.in
mulert/: CMakeLists.txt  Configuration.cpp  Configuration.h  Logger.cpp  Logger.h  Mule.cpp  Mule.h  MuleRtVersion.h  MuleRtVersion.h.in  SheetManager.cpp  SheetManager.h  SheetReference.cpp  SheetReference.h  TranscripterManager.cpp  TranscripterManager.h  VirtualFileSystem.cpp  VirtualFileSystem.h  mulert_api.h
mulert/Data/: Anchor.cpp  Anchor.h  Array.cpp  Array.h  Reference.cpp  Reference.h  ReferenceManager.cpp  ReferenceManager.h  Referrence.cpp  Referrence.h  Sheet.cpp  Sheet.h  SmartReference.cpp  SmartReference.h  Structure.cpp  Structure.h  TypeCreator.cpp  TypeCreator.h  TypeManager.cpp  TypeManager.h
mulert/Data/Basic/: BasicType.cpp  BasicType.h  ContextManager.cpp  ContextManager.h  MultiValue.cpp  MultiValue.h  Type.cpp  Type.h
mulert/Data/Space/: Fragment.h  FragmentManager.cpp  FragmentManager.h
mulert/Data/Storage/: BinaryData.h  DataManager.h
mulert/Storage/: BinaryData.cpp  BinaryData.h  DataManager.cpp  DataManager.h  ResourceManager.cpp  ResourceManager.h
scripts/: config.lua
sis/: CMakeLists.txt
sis/Cpp/: BisEnv.cpp  BisEnv.h  CStyleInitHandler.cpp  CStyleInitHandler.h  Context.h  Environment.cpp  Environment.h  Mappifier.cpp  Mappifier.h  StructureBuilder.cpp  StructureBuilder.h
sis/Csv/: CsvFileHandler.cpp  CsvFileHandler.h  CsvHandler.cpp  CsvHandler.h
sis/Json/: JsonFileHandler.cpp  JsonOutHandler.cpp  JsonOutHandler.h
sis/Lua/: CMakeLists.txt  LuaApi.cpp  LuaApi.h  LuaDataHandler.cpp  LuaDataHandler.h  LuaEnvironment.cpp  LuaEnvironment.h  LuaHost.cpp  LuaHost.h
sis/Lua/Api/: ContainerOperation.cpp  ContainerOperation.h  StreamOperation.cpp  StreamOperation.h  SystemOperation.cpp  SystemOperation.h  readme.txt
sis/Ruby/: CMakeLists.txt  RubyHost.h
sis/Xml/: MvXmlNode.cpp  MvXmlNode.h  XmlDefinition.cpp  XmlDefinition.h  XmlGenerator.h  XmlHandler.cpp  XmlHandler.h  XmlNode.cpp  XmlNode.h  XmlParser.cpp  XmlParser.h  XmlProc.cpp  XmlProc.h
